@@ -1,3 +1,6 @@
+* Tue Jun 26 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
+- Update version range of auditd dependency in metadata.json
+
 * Thu Nov 30 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.1.2-0
 - Update README.md from puppet strings
 
